--- a/src/index.html
+++ b/src/index.html
@@ -18,16 +18,13 @@
         >
         <meta
             name="description"
-            content="CoreUI - Free Angular Admin Template"
+            content
         >
         <meta
             name="author"
-            content="Łukasz Holeczek"
+            content
         >
-        <meta
-            name="keyword"
-            content="Bootstrap,Admin,Template,Free,Angular,Dashboard,Typescript"
-        >
+
         <link rel="shortcut icon" href="assets/favicon.ico">
         <title>Ichhe Dana:: Admin</title>
 
